--- a/style.css
+++ b/style.css
@@ -52,9 +52,11 @@ h2 {
   justify-content: space-between;
   align-items: center;
   padding: 16px 32px;
-  /* border-bottom: 2px solid lightgray;
-  background-color: gray; */
+  border-bottom: 1px solid lightgray;
   color: black;
+  background-color: white;
+  position: sticky;
+  top: 0;
 }
 
 .dex-text {
@@ -129,6 +131,11 @@ header span img {
   border: 2px solid lightgray;
   border-radius: 16px;
   box-shadow: 0 0 8px 4px lightgray;
+  cursor: pointer;
+}
+
+.card:hover {
+  box-shadow: 0 0 8px 4px gray;
 }
 
 .card-img {
@@ -165,4 +172,26 @@ header span img {
   border-radius: 8px;
   font-size: 24px;
   cursor: pointer;
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgb(0, 0, 0);
+  z-index: 99;
+}
+
+.modal-card {
+  width: 500px;
+  height: 750px;
+  background-color: white;
+  border: 2px solid lightgray;
+  border-radius: 16px;
+  /* box-shadow: 0 0 8px 4px lightgray; */
 }
