--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ header span img {
 }
 
 .modal {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -184,14 +184,45 @@ header span img {
   bottom: 0;
   right: 0;
   background-color: rgb(0, 0, 0);
-  z-index: 99;
 }
 
 .modal-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 24px;
   width: 500px;
   height: 750px;
   background-color: white;
   border: 2px solid lightgray;
   border-radius: 16px;
   /* box-shadow: 0 0 8px 4px lightgray; */
+}
+
+/* .modal-card button {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 0;
+  width: 100%;
+  height: 32px;
+  background-color: transparent;
+  border: none;
+  font-size: 40px;
+  cursor: pointer;
+} */
+
+.modal-card h2 {
+  font-size: 56px;
+}
+
+.modal-card img {
+  margin-top: -199px;
+  width: 350px;
+}
+
+.body-stats-container {
+  display: flex;
+  gap: 80px;
+  margin-top: 40px;
 }
