finish modal design

--- a/style.css
+++ b/style.css
@@ -192,11 +192,17 @@ header span img {
   align-items: center;
   padding: 24px;
   width: 500px;
-  height: 750px;
+  /* height: 750px; */
   background-color: white;
   border: 2px solid lightgray;
   border-radius: 16px;
   /* box-shadow: 0 0 8px 4px lightgray; */
+}
+
+.card-close-btn {
+  position: fixed;
+  top: 0;
+  right: 0;
 }
 
 /* .modal-card button {
@@ -214,15 +220,55 @@ header span img {
 
 .modal-card h2 {
   font-size: 56px;
+  margin: 0;
 }
 
 .modal-card img {
-  margin-top: -199px;
-  width: 350px;
+  width: 300px;
+  margin-top: 30px;
+  margin-bottom: 48px;
+}
+
+.modal-card-type-container {
+  display: flex;
 }
 
 .body-stats-container {
   display: flex;
-  gap: 80px;
-  margin-top: 40px;
+  justify-content: space-around;
+  width: 100%;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+.stats-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 24px;
+  border: 1px solid lightgray;
+  border-radius: 16px;
+}
+
+.stats-container h3 {
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.stat-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
+  gap: 8px;
+  background-color: rgba(230, 230, 230, 0.4);
+  width: 48px;
+  border-radius: 24px;
 }
