--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ h2 {
   background-color: white;
   position: sticky;
   top: 0;
+  z-index: 99;
 }
 
 .dex-text {
@@ -189,6 +190,7 @@ header span img {
   bottom: 0;
   right: 0;
   background-color: rgb(0, 0, 0);
+  z-index: 999;
 }
 
 .modal-card {
