--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ header span img {
   width: 500px;
   /* height: 750px; */
   background-color: white;
-  border: 2px solid lightgray;
+  /* border: 2px solid lightgray; */
   border-radius: 16px;
   /* box-shadow: 0 0 8px 4px lightgray; */
 }
@@ -222,19 +222,6 @@ header span img {
   top: 0;
   right: 0;
 }
-
-/* .modal-card button {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    padding: 0;
-    width: 100%;
-    height: 32px;
-    background-color: transparent;
-    border: none;
-    font-size: 40px;
-    cursor: pointer;
-  } */
 
 .modal-card h2 {
   font-size: 56px;
@@ -249,6 +236,7 @@ header span img {
 
 .modal-card-type-container {
   display: flex;
+  gap: 24px;
 }
 
 .body-stats-container {
@@ -265,8 +253,7 @@ header span img {
   align-items: center;
   width: 100%;
   padding: 24px;
-  border: 1px solid lightgray;
-  border-radius: 16px;
+  border-top: 1px solid black;
 }
 
 .stats-container h3 {
